# rust-cli-release

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  prepare-release.yml  publish-release.yml  rust-ci.yml
actions/render-installers/: action.yml
examples/: minimal.rs
scripts/: next-release-version.sh  render-installers.py  set-release-version.py
src/: build_support.rs  error.rs  lib.rs  update.rs
templates/: install.ps1.tmpl  install.sh.tmpl
tests/: install-sh.sh  release-version.py  render-installers.py  workflow-cache.py
