[package]
name = "rust-cli-release"
version = "1.3.1"
edition = "2024"
rust-version = "1.88"
description = "Reusable self-update and release infrastructure for Rust CLIs"
repository = "https://github.com/cdenihan/rust-cli-release"
license = "MIT"
publish = false

[dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.11"
tempfile = "3.27"
thiserror = "2.0"

[dev-dependencies]
clap = { version = "4.6", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
